--- a/src/Application/sample.fxml
+++ b/src/Application/sample.fxml
@@ -2,58 +2,95 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-
+<?import javafx.scene.text.Font?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Application.Controller">
-   <left>
-      <VBox prefHeight="400.0" prefWidth="172.0" spacing="5.0" style="-fx-background-color: #AFAFAF;" BorderPane.alignment="CENTER">
-         <children>
-            <Button fx:id="makeReservationButton" mnemonicParsing="false" prefHeight="22.0" prefWidth="184.0" style="-fx-background-color: #E3E2E2; -fx-border-radius: 100;" text="Make reservation" VBox.vgrow="ALWAYS" />
-            <Button mnemonicParsing="false" prefHeight="22.0" prefWidth="184.0" style="-fx-background-color: #E3E2E2; -fx-border-radius: 100;" text="Do something else" />
-         </children>
-      </VBox>
-   </left>
-   <center>
-      <VBox alignment="BOTTOM_CENTER" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
-         <children>
-            <HBox alignment="TOP_CENTER" prefHeight="63.0" prefWidth="628.0" spacing="20.0">
-               <children>
-                  <TextField promptText="Name" />
-                  <TextField promptText="Licence Number" />
-                  <TextField promptText="Phone Number" />
-               </children>
-               <padding>
-                  <Insets top="20.0" />
-               </padding>
-            </HBox>
-            <HBox alignment="TOP_CENTER" prefHeight="161.0" prefWidth="628.0" spacing="20.0">
-               <children>
-                  <TextField promptText="Street Name" />
-                  <TextField promptText="Zip Code" />
-                  <TextField promptText="GENDER! " />
-               </children>
-            </HBox>
-            <TableView fx:id="tableView" prefHeight="351.0" prefWidth="628.0">
-              <columns>
-                <TableColumn prefWidth="103.0" text="Autocamper" />
-                  <TableColumn prefWidth="104.0" text="Price category" />
-                  <TableColumn prefWidth="84.0" text="Model year" />
-                <TableColumn minWidth="0.0" prefWidth="123.0" text="Heating Type" />
-                  <TableColumn prefWidth="81.5" text="No. of beds" />
-                  <TableColumn prefWidth="75.0" text="Size" />
-                  <TableColumn prefWidth="75.0" text="Description" />
-              </columns>
-               <columnResizePolicy>
-                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-               </columnResizePolicy>
-            </TableView>
-         </children>
-      </VBox>
-   </center>
+    <left>
+        <VBox prefHeight="400.0" prefWidth="172.0" spacing="10.0" style="-fx-background-color: #0B0B3B;" BorderPane.alignment="CENTER">
+            <children>
+                <Button fx:id="makeReservationButton" mnemonicParsing="false" onAction="#handleMakeReservation" prefHeight="22.0" prefWidth="184.0" style="-fx-background-color: #FFFFFF; -fx-background-radius: 0;" text="Make reservation" VBox.vgrow="ALWAYS">
+               <font>
+                  <Font name="Gill Sans MT" size="12.0" />
+               </font></Button>
+                <Button mnemonicParsing="false" prefHeight="22.0" prefWidth="184.0" style="-fx-background-color: #FFFFFF; -fx-background-radius: 0;" text="Do something else">
+               <font>
+                  <Font name="Gill Sans MT" size="12.0" />
+               </font></Button>
+            </children>
+         <padding>
+            <Insets top="10.0" />
+         </padding>
+        </VBox>
+    </left>
+    <center>
+        <VBox alignment="BOTTOM_CENTER" prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: #CEECF5;" BorderPane.alignment="CENTER">
+            <children>
+            <Label fx:id="HeadLabel" alignment="CENTER" prefHeight="27.0" prefWidth="341.0" text="Please enter your phone number">
+               <font>
+                  <Font name="Gill Sans MT Ext Condensed Bold" size="27.0" />
+               </font>
+            </Label>
+                <HBox fx:id="topHBox" alignment="TOP_CENTER" prefHeight="63.0" prefWidth="628.0" spacing="20.0" visible="false">
+                    <children>
+                        <TextField fx:id="nameTextfield" promptText="Name" visible="false" />
+                        <TextField fx:id="phoneNoTextfield" promptText="Phone Number" />
+                        <TextField fx:id="licenceTextfield" promptText="Licence Number" visible="false" />
+                    </children>
+                    <padding>
+                        <Insets top="20.0" />
+                    </padding>
+                </HBox>
+                <HBox fx:id="middleHBox" alignment="TOP_CENTER" prefHeight="76.0" prefWidth="628.0" spacing="20.0" visible="false">
+                    <children>
+                        <TextField fx:id="streetTextfield" promptText="Street Name" />
+                        <TextField fx:id="zipTextfield" promptText="Zip Code" />
+                        <TextField fx:id="genderTextfield" promptText="GENDER! " />
+                    </children>
+                </HBox>
+                <HBox fx:id="bottomHBox" alignment="CENTER" prefHeight="52.0" prefWidth="628.0" visible="false">
+                    <children>
+                        <Button fx:id="confirmCustomerInfo" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#handleCustomerInfo" style="-fx-background-color: #FFFFFF; -fx-background-radius: 0;" text="Confirm">
+                     <font>
+                        <Font name="Gill Sans MT" size="15.0" />
+                     </font></Button>
+                    </children>
+                </HBox>
+                <HBox fx:id="checkButtonHBox" alignment="CENTER" prefHeight="67.0" prefWidth="628.0">
+                    <children>
+                        <Button fx:id="checkPhoneNoButton" mnemonicParsing="false" onAction="#handleCheckPhoneNo" style="-fx-background-color: #FFFFFF; -fx-background-radius: 0;" text="Check" visible="false">
+                     <font>
+                        <Font name="Gill Sans MT" size="15.0" />
+                     </font></Button>
+                    </children>
+                </HBox>
+                <TableView fx:id="tableView" prefHeight="351.0" prefWidth="628.0" visible="false">
+                    <columns>
+                        <TableColumn prefWidth="103.0" text="Autocamper" />
+                        <TableColumn prefWidth="104.0" text="Price category" />
+                        <TableColumn prefWidth="84.0" text="Model year" />
+                        <TableColumn minWidth="0.0" prefWidth="123.0" text="Heating Type" />
+                        <TableColumn prefWidth="81.5" text="No. of beds" />
+                        <TableColumn prefWidth="75.0" text="Size" />
+                        <TableColumn prefWidth="75.0" text="Description" />
+                    </columns>
+                    <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                    </columnResizePolicy>
+                </TableView>
+            </children>
+         <BorderPane.margin>
+            <Insets />
+         </BorderPane.margin>
+         <padding>
+            <Insets top="9.0" />
+         </padding>
+        </VBox>
+    </center>
 </BorderPane>
