--- a/src/Application/sample.fxml
+++ b/src/Application/sample.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -15,6 +16,11 @@
     <left>
         <VBox prefHeight="400.0" prefWidth="172.0" spacing="10.0" style="-fx-background-color: #0B0B3B;" BorderPane.alignment="CENTER">
             <children>
+            <Button fx:id="homeButton" mnemonicParsing="false" prefHeight="22.0" prefWidth="184.0" style="-fx-background-color: #FFFFFF; -fx-background-radius: 0;" text="Home">
+               <font>
+                  <Font name="Gill Sans MT" size="12.0" />
+               </font>
+            </Button>
                 <Button fx:id="makeReservationButton" mnemonicParsing="false" onAction="#handleMakeReservation" prefHeight="22.0" prefWidth="184.0" style="-fx-background-color: #FFFFFF; -fx-background-radius: 0;" text="Make reservation" VBox.vgrow="ALWAYS">
                <font>
                   <Font name="Gill Sans MT" size="12.0" />
@@ -30,30 +36,35 @@
         </VBox>
     </left>
     <center>
-        <VBox alignment="BOTTOM_CENTER" prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: #CEECF5;" BorderPane.alignment="CENTER">
+        <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: #CEECF5;" BorderPane.alignment="CENTER">
             <children>
-            <Label fx:id="HeadLabel" alignment="CENTER" prefHeight="27.0" prefWidth="341.0" text="Please enter your phone number">
+            <Label fx:id="headLabel" alignment="CENTER" prefHeight="27.0" prefWidth="341.0" text="Welcome to Wagners Auto Camper Rental Service">
                <font>
                   <Font name="Gill Sans MT Ext Condensed Bold" size="27.0" />
                </font>
             </Label>
                 <HBox fx:id="topHBox" alignment="TOP_CENTER" prefHeight="63.0" prefWidth="628.0" spacing="20.0" visible="false">
                     <children>
-                        <TextField fx:id="nameTextfield" promptText="Name" visible="false" />
-                        <TextField fx:id="phoneNoTextfield" promptText="Phone Number" />
-                        <TextField fx:id="licenceTextfield" promptText="Licence Number" visible="false" />
+                        <TextField fx:id="nameTextfield" promptText="Name" style="-fx-background-color: #FFFFFF; -fx-background-radius: 0; -fx-border-color: #1C1C1C;" visible="false" />
+                        <TextField fx:id="phoneNoTextfield" promptText="Phone Number" style="-fx-background-color: #FFFFFF; -fx-background-radius: 0; -fx-border-color: #1C1C1C;" />
+                        <TextField fx:id="licenceTextfield" promptText="Licence Number" style="-fx-background-color: #FFFFFF; -fx-background-radius: 0; -fx-border-color: #1C1C1C;" visible="false" />
                     </children>
                     <padding>
                         <Insets top="20.0" />
                     </padding>
                 </HBox>
-                <HBox fx:id="middleHBox" alignment="TOP_CENTER" prefHeight="76.0" prefWidth="628.0" spacing="20.0" visible="false">
+                <HBox fx:id="middleHBox" alignment="TOP_CENTER" prefHeight="50.0" prefWidth="628.0" spacing="20.0" visible="false">
                     <children>
-                        <TextField fx:id="streetTextfield" promptText="Street Name" />
-                        <TextField fx:id="zipTextfield" promptText="Zip Code" />
-                        <TextField fx:id="genderTextfield" promptText="GENDER! " />
+                        <TextField fx:id="streetTextfield" promptText="Street Name" style="-fx-background-color: #FFFFFF; -fx-border-radius: 0; -fx-border-color: #1C1C1C;" />
+                        <TextField fx:id="zipTextfield" promptText="Zip Code" style="-fx-background-color: #FFFFFF; -fx-background-radius: 0; -fx-border-color: #1C1C1C;" />
+                  <PasswordField fx:id="passwordField" promptText="Password" style="-fx-background-color: #FFFFFF; -fx-background-radius: 0; -fx-border-color: #1C1C1C;" />
                     </children>
                 </HBox>
+            <Label fx:id="infoLabel" text="The info was saved successfully" visible="false">
+               <font>
+                  <Font name="Gill Sans MT" size="13.0" />
+               </font>
+            </Label>
                 <HBox fx:id="bottomHBox" alignment="CENTER" prefHeight="52.0" prefWidth="628.0" visible="false">
                     <children>
                         <Button fx:id="confirmCustomerInfo" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#handleCustomerInfo" style="-fx-background-color: #FFFFFF; -fx-background-radius: 0;" text="Confirm">
@@ -62,9 +73,9 @@
                      </font></Button>
                     </children>
                 </HBox>
-                <HBox fx:id="checkButtonHBox" alignment="CENTER" prefHeight="67.0" prefWidth="628.0">
+                <HBox fx:id="checkButtonHBox" alignment="CENTER" prefHeight="67.0" prefWidth="628.0" visible="false">
                     <children>
-                        <Button fx:id="checkPhoneNoButton" mnemonicParsing="false" onAction="#handleCheckPhoneNo" style="-fx-background-color: #FFFFFF; -fx-background-radius: 0;" text="Check" visible="false">
+                        <Button fx:id="checkPhoneNoButton" mnemonicParsing="false" onAction="#handleCheckPhoneNo" style="-fx-background-color: #FFFFFF; -fx-background-radius: 0;" text="Check">
                      <font>
                         <Font name="Gill Sans MT" size="15.0" />
                      </font></Button>
