--- a/src/Application/sample.fxml
+++ b/src/Application/sample.fxml
@@ -25,7 +25,7 @@
                <font>
                   <Font name="Gill Sans MT" size="12.0" />
                </font></Button>
-                <Button mnemonicParsing="false" prefHeight="22.0" prefWidth="184.0" style="-fx-background-color: #FFFFFF; -fx-background-radius: 0;" text="Do something else">
+                <Button mnemonicParsing="false" onAction="#loginScreen" prefHeight="22.0" prefWidth="184.0" style="-fx-background-color: #FFFFFF; -fx-background-radius: 0;" text="Do something else">
                <font>
                   <Font name="Gill Sans MT" size="12.0" />
                </font></Button>
@@ -36,11 +36,16 @@
         </VBox>
     </left>
     <center>
-        <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: #CEECF5;" BorderPane.alignment="CENTER">
+        <VBox fx:id="mainVbox" alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: #CEECF5;" BorderPane.alignment="CENTER">
             <children>
             <Label fx:id="headLabel" alignment="CENTER" prefHeight="27.0" prefWidth="341.0" text="Welcome to Wagners Auto Camper Rental Service">
                <font>
                   <Font name="Gill Sans MT Ext Condensed Bold" size="27.0" />
+               </font>
+            </Label>
+            <Label fx:id="infoLabel" text="The info was saved successfully" visible="false">
+               <font>
+                  <Font name="Gill Sans MT" size="13.0" />
                </font>
             </Label>
                 <HBox fx:id="topHBox" alignment="TOP_CENTER" prefHeight="63.0" prefWidth="628.0" spacing="20.0" visible="false">
@@ -60,11 +65,6 @@
                   <PasswordField fx:id="passwordField" promptText="Password" style="-fx-background-color: #FFFFFF; -fx-background-radius: 0; -fx-border-color: #1C1C1C;" />
                     </children>
                 </HBox>
-            <Label fx:id="infoLabel" text="The info was saved successfully" visible="false">
-               <font>
-                  <Font name="Gill Sans MT" size="13.0" />
-               </font>
-            </Label>
                 <HBox fx:id="bottomHBox" alignment="CENTER" prefHeight="52.0" prefWidth="628.0" visible="false">
                     <children>
                         <Button fx:id="confirmCustomerInfo" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#handleCustomerInfo" style="-fx-background-color: #FFFFFF; -fx-background-radius: 0;" text="Confirm">
@@ -104,4 +104,7 @@
          </padding>
         </VBox>
     </center>
+   <right>
+      <VBox fx:id="otherVbox" prefHeight="200.0" prefWidth="0.0" style="-fx-background-color: RED;" BorderPane.alignment="CENTER" />
+   </right>
 </BorderPane>
