--- a/src/Application/sampleByAnne.fxml
+++ b/src/Application/sampleByAnne.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -12,7 +17,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Application.Controller">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Anne.Application.Controller">
     <left>
         <VBox prefHeight="400.0" prefWidth="172.0" spacing="10.0" style="-fx-background-color: #0B0B3B;" BorderPane.alignment="CENTER">
             <children>
@@ -29,11 +34,6 @@
                <font>
                   <Font name="Gill Sans MT" size="12.0" />
                </font></Button>
-            <Label fx:id="signInLabel" alignment="CENTER" prefHeight="17.0" prefWidth="177.0" text="Not signed in" textFill="WHITE">
-               <font>
-                  <Font name="Gill Sans MT Condensed" size="17.0" />
-               </font>
-            </Label>
             </children>
          <padding>
             <Insets top="10.0" />
@@ -41,7 +41,7 @@
         </VBox>
     </left>
     <center>
-        <VBox fx:id="mainVbox" alignment="TOP_CENTER" prefHeight="600.0" prefWidth="200.0" style="-fx-background-color: #CEECF5;" BorderPane.alignment="CENTER">
+        <VBox fx:id="mainVbox" alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: #CEECF5;" BorderPane.alignment="CENTER">
             <children>
             <Label fx:id="headLabel" alignment="CENTER" prefHeight="27.0" prefWidth="341.0" text="Welcome to Wagners Auto Camper Rental Service">
                <font>
@@ -63,6 +63,8 @@
                         <Insets top="20.0" />
                     </padding>
                 </HBox>
+            <Label fx:id="weekfromLabel" text="Week from" visible="false" />
+            <ChoiceBox fx:id="weekfromChoice" prefWidth="150.0" visible="false" />
                 <HBox fx:id="middleHBox" alignment="TOP_CENTER" prefHeight="50.0" prefWidth="628.0" spacing="20.0" visible="false">
                     <children>
                         <TextField fx:id="streetTextfield" promptText="Street Name" style="-fx-background-color: #FFFFFF; -fx-border-radius: 0; -fx-border-color: #1C1C1C;" />
@@ -70,6 +72,8 @@
                   <PasswordField fx:id="passwordField" promptText="Password" style="-fx-background-color: #FFFFFF; -fx-background-radius: 0; -fx-border-color: #1C1C1C;" />
                     </children>
                 </HBox>
+            <Label fx:id="weektoLabel" text="Week to" visible="false" />
+            <ChoiceBox fx:id="weektoChoice" prefWidth="150.0" visible="false" />
                 <HBox fx:id="bottomHBox" alignment="CENTER" prefHeight="52.0" prefWidth="628.0" visible="false">
                     <children>
                         <Button fx:id="confirmCustomerInfo" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#handleCustomerInfo" style="-fx-background-color: #FFFFFF; -fx-background-radius: 0;" text="Confirm">
@@ -78,6 +82,21 @@
                      </font></Button>
                     </children>
                 </HBox>
+            <Button fx:id="searchWeeksButton" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#handleSearch" text="Search" visible="false" />
+                <TableView fx:id="tableView" prefHeight="225.0" prefWidth="628.0" visible="false">
+                    <columns>
+                        <TableColumn fx:id="autocamperCol" prefWidth="103.0" text="Autocamper" />
+                        <TableColumn fx:id="priceCol" prefWidth="104.0" text="Price category" />
+                        <TableColumn fx:id="modelCol" prefWidth="84.0" text="Model year" />
+                        <TableColumn fx:id="heatingCol" minWidth="0.0" prefWidth="123.0" text="Heating Type" />
+                        <TableColumn fx:id="noOfBedsCol" prefWidth="81.5" text="No. of beds" />
+                        <TableColumn fx:id="sizeCol" prefWidth="75.0" text="Size" />
+                        <TableColumn fx:id="descriptionCol" prefWidth="75.0" text="Description" />
+                    </columns>
+                    <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                    </columnResizePolicy>
+                </TableView>
                 <HBox fx:id="checkButtonHBox" alignment="CENTER" prefHeight="67.0" prefWidth="628.0" visible="false">
                     <children>
                         <Button fx:id="checkPhoneNoButton" mnemonicParsing="false" onAction="#handleCheckPhoneNo" style="-fx-background-color: #FFFFFF; -fx-background-radius: 0;" text="Check">
@@ -86,20 +105,7 @@
                      </font></Button>
                     </children>
                 </HBox>
-                <TableView fx:id="tableView" prefHeight="351.0" prefWidth="628.0" visible="false">
-                    <columns>
-                        <TableColumn prefWidth="103.0" text="Autocamper" />
-                        <TableColumn prefWidth="104.0" text="Price category" />
-                        <TableColumn prefWidth="84.0" text="Model year" />
-                        <TableColumn minWidth="0.0" prefWidth="123.0" text="Heating Type" />
-                        <TableColumn prefWidth="81.5" text="No. of beds" />
-                        <TableColumn prefWidth="75.0" text="Size" />
-                        <TableColumn prefWidth="75.0" text="Description" />
-                    </columns>
-                    <columnResizePolicy>
-                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                    </columnResizePolicy>
-                </TableView>
+            <Button fx:id="confirmAutoChoiceButton" mnemonicParsing="false" onAction="#handleChoice" text="Confirm" visible="false" />
             </children>
          <BorderPane.margin>
             <Insets />
@@ -110,6 +116,6 @@
         </VBox>
     </center>
    <right>
-      <VBox fx:id="otherVbox" prefHeight="200.0" style="-fx-background-color: RED;" BorderPane.alignment="CENTER" />
+      <VBox fx:id="otherVbox" prefHeight="200.0" prefWidth="0.0" style="-fx-background-color: RED;" BorderPane.alignment="CENTER" />
    </right>
 </BorderPane>
