--- a/src/Application/sample.fxml
+++ b/src/Application/sample.fxml
@@ -34,11 +34,6 @@
                <font>
                   <Font name="Gill Sans MT" size="12.0" />
                </font></Button>
-            <Label fx:id="signInLabel" alignment="CENTER" prefHeight="17.0" prefWidth="177.0" text="Not signed in" textFill="WHITE">
-               <font>
-                  <Font name="Gill Sans MT Condensed" size="17.0" />
-               </font>
-            </Label>
             </children>
          <padding>
             <Insets top="10.0" />
@@ -46,7 +41,7 @@
         </VBox>
     </left>
     <center>
-        <VBox fx:id="mainVbox" alignment="TOP_CENTER" prefHeight="600.0" prefWidth="200.0" style="-fx-background-color: #CEECF5;" BorderPane.alignment="CENTER">
+        <VBox fx:id="mainVbox" alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: #CEECF5;" BorderPane.alignment="CENTER">
             <children>
             <Label fx:id="headLabel" alignment="CENTER" prefHeight="27.0" prefWidth="341.0" text="Welcome to Wagners Auto Camper Rental Service">
                <font>
@@ -121,6 +116,6 @@
         </VBox>
     </center>
    <right>
-      <VBox fx:id="otherVbox" prefHeight="200.0" style="-fx-background-color: RED;" BorderPane.alignment="CENTER" />
+      <VBox fx:id="otherVbox" prefHeight="200.0" prefWidth="0.0" style="-fx-background-color: RED;" BorderPane.alignment="CENTER" />
    </right>
 </BorderPane>
