--- a/src/Application/sample.fxml
+++ b/src/Application/sample.fxml
@@ -1,24 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.image.*?>
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Application.Controller">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Application.Controller">
     <left>
         <VBox fx:id="mainVbox" prefHeight="606.0" prefWidth="172.0" spacing="10.0" style="-fx-background-color: #3c652c;" BorderPane.alignment="CENTER">
             <children>
@@ -37,7 +35,7 @@
                </font></Button>
             <Label fx:id="signInLabel" alignment="CENTER" prefHeight="17.0" prefWidth="177.0" text="Not signed in" textFill="WHITE">
                <font>
-                  <Font name="Gill Sans MT Condensed" size="17.0" />
+                  <Font name="Gill Sans MT" size="13.0" />
                </font>
             </Label>
             </children>
@@ -95,7 +93,7 @@
                   <Font name="Gill Sans MT" size="15.0" />
                </font>
             </Button>
-            <ImageView fx:id="frontImage" fitHeight="238.0" fitWidth="634.0" layoutX="-1.0" layoutY="106.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="frontImage" fitHeight="238.0" fitWidth="632.0" layoutX="1.0" layoutY="105.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../Domain/Autocamper/Images/autocamperesø.jpg" />
                </image>
